--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,7 @@
 # backend/.env
+
+MONGODB_PASS=Qu6s6hEn0qZAyKhJ
+MONGODB_USER=antoniojimenez77_db_user
 MONGO_URI="mongodb+srv://antoniojimenez77_db_user:Qu6s6hEn0qZAyKhJ@cluster0.ddx2dso.mongodb.net/sitio?retryWrites=true&w=majority"
 SECRET_KEY="123456"
-
+FLASK_ENV=flaskback
